@@ -10,6 +10,7 @@ import java.time.LocalDate;
 import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 @Service
@@ -19,6 +20,8 @@ public class CartService {
     private RoomReservationRepository roomReservationRepository;
     @Autowired
     private ReservationDetailsRepository reservationDetailsRepository;
+    @Autowired
+    private AccountService accountService;
 
     public void addRoomReservations(Cart cart, List<Room> selectedRooms, LocalDate start, LocalDate end) {
         List<LocalDate> dates = setupDateList(start, end);
@@ -36,6 +39,7 @@ public class CartService {
         reservationDetailsRepository.save(reservationDetails);
         guest.addCurrentReservation(reservationDetails);
         cart.emptyCart();
+        accountService.sendConfirmationEmail(guest, reservationDetails);
         return reservationDetails;
     }
 
@@ -44,7 +48,7 @@ public class CartService {
         return IntStream.iterate(0, i -> i + 1)
                 .limit(numOfDaysBetween)
                 .mapToObj(start::plusDays)
-                .toList();
+                .collect(Collectors.toList());
 
 
     }
